2009-03-12  Kevin Decker  <kdecker@apple.com>

        Reviewed by Anders Carlsson.

        Fixed: <rdar://problem/5815862> Opening a subclassed NSWindow from a Safari plugin causes Safari to crash on Quit
        
        This fix addresses crashes in both Silverlight and ChemDraw.  This type of crash would occur because AppKit still
        had a reference to open windows that the plugin created (which no longer exist). 
        
        * Plugins/WebNetscapePluginPackage.mm:
        (-[WebNetscapePluginPackage _unloadWithShutdown:]): Do not unload the plug-in bundle on browser shutdown. 
        
2009-03-11  David Kilzer  <ddkilzer@apple.com>

        Remove duplicate header include

        Rubber-stamped by Mark Rowe.

        * WebView/WebView.mm: Remove duplicate #include <runtime/InitializeThreading.h>.
        Also realphabetized lowercase #include statements.

2009-03-11  David Kilzer  <ddkilzer@apple.com>

        Clarify comments regarding order of FEATURE_DEFINES

        Rubber-stamped by Mark Rowe.

        * Configurations/WebKit.xcconfig: Added warning about the
        consequences when FEATURE_DEFINES are not kept in sync.

2009-03-11  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        WebKit side of <rdar://problem/6656147>.
        
        * Plugins/Hosted/NetscapePluginHostManager.mm:
        (WebKit::NetscapePluginHostManager::instantiatePlugin):
        Pass the requestID to _WKPHInstantiatePlugin.
        
        * Plugins/Hosted/NetscapePluginHostProxy.mm:
        Pass the requestID to setCurrentReply.
        
        * Plugins/Hosted/NetscapePluginInstanceProxy.h:
        (WebKit::NetscapePluginInstanceProxy::setCurrentReply):
        Store the reply in a map with the requestID as the key.
        
        (WebKit::NetscapePluginInstanceProxy::waitForReply):
        Wait for a reply that matches the given requestID.
        
        * Plugins/Hosted/NetscapePluginInstanceProxy.mm: